app/src/main/java/com/example/aggrocery/Common/StringKeyboard.java
package com.example.aggrocery.Common;

public class StringKeyboard {

    public  static  String SP_userSession = "UserSession";
    public  static  String SP_userName = "UserData";



    // error
    public static  String error_Code = "Error";
    public static  String error_invalidCredential_message = "Invalid credential";
    public static  String error_allFieldsRequired_message = "Please enter all fields.";
    public static  String error_enterItemCode = "Please enter an item code.";
    public static  String error_signUpFailed_message = "Signup failed. Please try again.";

public  static  String error_price_non_negative = "Quantity and price must be non-negative.";
    public  static  String error_returnAbleFields = "Please select returnable or non-returnable.";
    public  static  String error_CustomAlertDialog = "CustomAlertDialog";
    public static  String addStockSuccessfully = "Item added to stock successfully";
    public static  String failToAddStock = "Failed to add item to stock.";


    public  static  String fail_to_add_stock = "Failed to add stock.";
    public  static  String success_CustomAlertDialog = "Item has been successfully sold.";
    public  static  String saleDateNotBeFutureDate = "Sales date can't be future date";
    public  static  String ItemNotExistInDatabase = "Item not exist in database";
    public  static  String SaleQtyMoreThanAvailbleQty = "Sale Qty more than available qty";


    public  static  String quantity_mustGreaterThanZero ="Quantity purchased must be greater than 0.";
    public  static  String purchaseDateNotBeFutureDate = "Purchase date can't be future date";

    public static  String purchase_updated = "Item purchased and stock updated.";
    public static  String failedtoUpdateQuantity = "Failed to update stock quantity.";
    public static  String failtoAddPurchaseDetails = "Failed to add purchase details.";
    public static  String notEnoughQTYAvailable = "Not enough available quantity in stock.";

}
